# oca-ocb-crm

./: README.md
odoo-bringout-oca-ocb-crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm/crm/i18n/: bs.po
odoo-bringout-oca-ocb-crm/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-crm_iap_enrich/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm_iap_enrich/crm_iap_enrich/i18n/: bs.po
odoo-bringout-oca-ocb-crm_iap_enrich/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-crm_iap_mine/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm_iap_mine/crm_iap_mine/i18n/: bs.po
odoo-bringout-oca-ocb-crm_iap_mine/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-crm_livechat/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm_livechat/crm_livechat/i18n/: bs.po
odoo-bringout-oca-ocb-crm_livechat/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-crm_mail_plugin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm_mail_plugin/crm_mail_plugin/i18n/: bs.po
odoo-bringout-oca-ocb-crm_mail_plugin/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-crm_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-crm_sms/crm_sms/i18n/: bs.po
odoo-bringout-oca-ocb-crm_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
